<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="match_parent">

    <include layout="@layout/tag_layout" />

    <TextView
        android:id="@+id/sumary_label"
        android:text="@string/sumary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/md_red_A100"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/recipe_sumary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/recipe_label"
        android:text="@string/recipe_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/md_red_A100"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/ingredient_label"
        android:text="@string/ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/md_red_A100"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/recipe_ingredient_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/burden_label"
        android:text="@string/burden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/md_red_A100"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/recipe_burden_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/step_label"
        android:text="@string/step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/md_red_A100"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="150dp"/>


    </RelativeLayout>




    <!--<include layout="@layout/step_layout" />-->





</LinearLayout>